
Table "categorias" {
  "id" int [pk, not null, increment]
  "nome" varchar(100) [not null]
  "descricao" text

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "conteudos_publicos" {
  "id" int [pk, not null, increment]
  "secao" varchar(80) [not null]
  "campo" varchar(80) [not null]
  "titulo" varchar(150)
  "conteudo" text [not null]
  "ordem" int [default: '0']
  "ativo" tinyint(1) [not null, default: '1']

  Indexes {
    (secao, campo, ordem) [name: "conteudos_publicos_index_2"]
  }
}

Table "criticidades" {
  "id" int [pk, not null, increment]
  "nome" varchar(50) [not null]
  "descricao" text

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "documentos" {
  "id" int [pk, not null, increment]
  "tipo_documento_id" int [not null]
  "equipamento_id" int [not null]
  "fornecedor_id" int
  "nome" varchar(150) [not null]
  "data_documento" date
  "data_validade" date
  "ficheiro_link" varchar(255) [not null]
  "observacoes" text
  "ativo" tinyint(1) [not null, default: '1']

  Indexes {
    tipo_documento_id [name: "tipo_documento_id"]
    equipamento_id [name: "equipamento_id"]
    fornecedor_id [name: "fornecedor_id"]
  }
}

Table "equipamento_fornecedor" {
  "id" int [pk, not null, increment]
  "equipamento_id" int [not null]
  "fornecedor_id" int [not null]
  "tipo_fornecedor_id" int [not null]

  Indexes {
    (equipamento_id, fornecedor_id, tipo_fornecedor_id) [unique, name: "equipamento_fornecedor_index_1"]
    fornecedor_id [name: "fornecedor_id"]
    tipo_fornecedor_id [name: "tipo_fornecedor_id"]
  }
}

Table "equipamentos" {
  "id" int [pk, not null, increment]
  "localizacao_id" int [not null]
  "categoria_id" int [not null]
  "estado_id" int [not null]
  "criticidade_id" int [not null]
  "tipo_entrada_id" int [not null]
  "codigo_inventario" varchar(50) [not null]
  "designacao" varchar(150) [not null]
  "marca" varchar(100) [not null]
  "modelo" varchar(100) [not null]
  "numero_serie" varchar(100) [not null]
  "fabricante" varchar(150)
  "data_aquisicao" date
  "ano_fabrico" int
  "custo_aquisicao" decimal(10,2)
  "observacoes" text
  "ativo" tinyint(1) [not null, default: '1']

  Indexes {
    codigo_inventario [unique, name: "codigo_inventario"]
    (marca, modelo, numero_serie) [unique, name: "equipamentos_index_0"]
    localizacao_id [name: "localizacao_id"]
    categoria_id [name: "categoria_id"]
    estado_id [name: "estado_id"]
    criticidade_id [name: "criticidade_id"]
    tipo_entrada_id [name: "tipo_entrada_id"]
  }
}

Table "estados_equipamento" {
  "id" int [pk, not null, increment]
  "nome" varchar(50) [not null]

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "fornecedores" {
  "id" int [pk, not null, increment]
  "tipo_fornecedor_id" int [not null]
  "nome_empresa" varchar(150) [not null]
  "nif" varchar(20) [not null]
  "telefone" varchar(30)
  "email" varchar(150)
  "morada" varchar(255)
  "website" varchar(150)
  "pessoa_contacto" varchar(100)
  "telefone_contacto" varchar(30)
  "observacoes" text
  "ativo" tinyint(1) [not null, default: '1']

  Indexes {
    nif [unique, name: "nif"]
    tipo_fornecedor_id [name: "tipo_fornecedor_id"]
  }
}

Table "garantias_contratos" {
  "id" int [pk, not null, increment]
  "equipamento_id" int [not null]
  "fornecedor_id" int
  "inicio_garantia" date
  "fim_garantia" date
  "tem_contrato_manutencao" tinyint(1) [not null, default: '0']
  "tipo_contrato" varchar(80)
  "entidade_responsavel" varchar(150)
  "periodicidade" varchar(80)
  "observacoes" text

  Indexes {
    equipamento_id [name: "equipamento_id"]
    fornecedor_id [name: "fornecedor_id"]
  }
}

Table "localizacoes" {
  "id" int [pk, not null, increment]
  "edificio" varchar(100) [not null]
  "piso" varchar(50) [not null]
  "servico" varchar(100) [not null]
  "sala" varchar(100) [not null]
  "ativo" tinyint(1) [not null, default: '1']
}

Table "logs_sistema" {
  "id" int [pk, not null, increment]
  "utilizador_id" int
  "acao" varchar(150) [not null]
  "tabela_afetada" varchar(80)
  "registo_id" int
  "data_evento" datetime
  "detalhes" text

  Indexes {
    utilizador_id [name: "utilizador_id"]
  }
}

Table "mensagens_contacto" {
  "id" int [pk, not null, increment]
  "nome" varchar(100) [not null]
  "email" varchar(150) [not null]
  "mensagem" text [not null]
  "data_envio" datetime
  "lida" tinyint(1) [not null, default: '0']
}

Table "perfis" {
  "id" int [pk, not null, increment]
  "nome" varchar(50) [not null]

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "tipos_documento" {
  "id" int [pk, not null, increment]
  "nome" varchar(80) [not null]

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "tipos_entrada" {
  "id" int [pk, not null, increment]
  "nome" varchar(50) [not null]

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "tipos_fornecedor" {
  "id" int [pk, not null, increment]
  "nome" varchar(80) [not null]

  Indexes {
    nome [unique, name: "nome"]
  }
}

Table "utilizadores" {
  "id" int [pk, not null, increment]
  "perfil_id" int [not null]
  "nome" varchar(100) [not null]
  "email" varchar(150) [not null]
  "password_hash" varchar(255) [not null]
  "ativo" tinyint(1) [not null, default: '1']
  "criado_em" datetime

  Indexes {
    email [unique, name: "email"]
    perfil_id [name: "perfil_id"]
  }
}

Ref "documentos_ibfk_1":"tipos_documento"."id" < "documentos"."tipo_documento_id"

Ref "documentos_ibfk_2":"equipamentos"."id" < "documentos"."equipamento_id"

Ref "documentos_ibfk_3":"fornecedores"."id" < "documentos"."fornecedor_id"

Ref "equipamento_fornecedor_ibfk_1":"equipamentos"."id" < "equipamento_fornecedor"."equipamento_id"

Ref "equipamento_fornecedor_ibfk_2":"fornecedores"."id" < "equipamento_fornecedor"."fornecedor_id"

Ref "equipamento_fornecedor_ibfk_3":"tipos_fornecedor"."id" < "equipamento_fornecedor"."tipo_fornecedor_id"

Ref "equipamentos_ibfk_1":"localizacoes"."id" < "equipamentos"."localizacao_id"

Ref "equipamentos_ibfk_2":"categorias"."id" < "equipamentos"."categoria_id"

Ref "equipamentos_ibfk_3":"estados_equipamento"."id" < "equipamentos"."estado_id"

Ref "equipamentos_ibfk_4":"criticidades"."id" < "equipamentos"."criticidade_id"

Ref "equipamentos_ibfk_5":"tipos_entrada"."id" < "equipamentos"."tipo_entrada_id"

Ref "fornecedores_ibfk_1":"tipos_fornecedor"."id" < "fornecedores"."tipo_fornecedor_id"

Ref "garantias_contratos_ibfk_1":"equipamentos"."id" < "garantias_contratos"."equipamento_id"

Ref "garantias_contratos_ibfk_2":"fornecedores"."id" < "garantias_contratos"."fornecedor_id"

Ref "logs_sistema_ibfk_1":"utilizadores"."id" < "logs_sistema"."utilizador_id"

Ref "utilizadores_ibfk_1":"perfis"."id" < "utilizadores"."perfil_id"
